# cmake-quick-project

./: .gitignore  CMakeLists.txt  CQP.md  README.md  project.py  project.toml
main/: CMakeLists.txt  package.toml
